# xova

./: .gitignore  AUDIT_2026-05-04.md  AUDIT_2026-05-04_pass2.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MASTER_TODO.md  README.md  SECURITY.md  absorb_loop.py  coherence_sentinel.py  forge_listener.py  mesh_runner.py  start_xova.bat  start_xova.ps1  start_xova.vbs  xova_watchdog.py
app/: Codex.md  IDENTITY.md  SOUL.md  backup_xova.ps1  build_mode.bat  computer_control.py  jarvis.py  package-lock.json  package.json  speak.py  tailwind.config.js  tsconfig.app.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
memory/: debug_inbox.py  debug_inbox2.py  federation_graph.json  forge_notes.md  run_cycle.py  run_evolution.py  xova_browser_direct.py  xova_talk_to_claude.py
plugins/: action_trace_write.py  aeon_publisher.py  aeon_summary.py  aeon_sweep.py  agent_05_phase_tracker_finding.py  agent_06_lucas_finding.py  agent_07_field_weaver_finding.py  agent_11_test_validator_finding.py  agent_auto_trigger.py  agent_evolve.py  agent_evolve_all.py  agent_memory_writer.py  agent_refactor.py  agent_runtime.py  agent_task_runner.py  agent_write_code.py  browser_control.py  build_artifacts.sh  check_artifacts.sh  ci_health.py  cipher_agent.py  context_broker.py  corpus_recall.py  corpus_signer.py  curiosity_engine.py  dev_check.sh  domain_scan.py  dream_consolidator.py  drive_matrix_probe.py  evo_runs.py  evolution_stages_probe.py  (+42 more)
(+140 files in other folders)
